add cutesy stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>Etch a Sketch</title>
   </head>
   <body>
+    <header>
+      <div class="selections">
+        Pick a color:
+        <button id="option1" value="#cae22c"></button>
+        <button id="option2" value="#2ce2b1"></button>
+        <button id="option3" value="#e22c81"></button>
+      </div>
+      <button id="clear">Clear Active Selection to Default Rainbow</button>
+      <button id="clear-sketch">Reset the Etch-a-Sketch</button>
+    </header>
     <div id="app"></div>
+    <footer>
+      made by kirsty
+      <a
+        href="http://github.com/ofthewildfire"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Github</a
+      >
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
